# zephyria-go

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  REMAINING_GAPS_AND_ISSUES.md  SECURITY_AND_IMPLEMENTATION_GAPS.md  build.zig  build_log.txt  go.mod  go.sum  hash_check.go  improvement-plan.md  main.go  setup_deps.sh  specs.md  trace_snippet.txt
.qoder/quests/: senior-go-team-setup-1767720453.md  senior-go-team-setup.md
bench_data/: 000003.ldb  LOG  MANIFEST-000000
bench_data/discovery.ldb/: LOG
cmd/consensussync_test/: main.go
cmd/metamask_sim/: main.go
cmd/simulation/: main.go
cmd/stake_sim/: main.go
cmd/verify_deploy/: main.go
cmd/verify_rpc/: main.go
cmd/verify_ws/: main.go
cmd/web-server/: main.go
cmd/zephyria/: main.go
cmd/zwallet/: main.go
consensus/: mod.zig  types.zig  vdf.zig  vdf_test.zig  votepool.go  votepool.zig  vrf.zig  zelius.go  zelius.zig  zelius_multinode_test.go  zelius_peak_test.go  zelius_perf_test.go  zelius_schedule.go  zelius_test.go  zelius_types.go  zelius_validators.go  zelius_vdf_test.go  zelius_vrf_test.go
consensus/vdf/: metronome.go  vdf.go  (+1 more)
contracts/: TokenProgram.sol
core/: aquarius_integration_test.go  benchmark_aquarius_test.go  blockchain.go  blockchain.zig  blockchain_eip1559.go.bak  delta_precompile.go  executor.go  executor_test.go  genesis.go  genesis.zig  scheduler.go  scheduler.zig  scheduler_test.go  snapshot.go  state_test.go  system_contracts.go  tx_list.go  tx_pool.go  tx_pool.zig  validator_registry.go
net/: socket_utils.zig
node/: api.go  config.go  handler.go  metrics.go  miner.go  miner.zig  node.go  optimistic_persistence_test.go  security.go
p2p/: broadcast.go  discovery.go  enode.go  handlers.go  message.go  peer.go  peer.zig  quic_debug_test.go  rotor.go  rotor_test.go  server.go  shred_handlers.go  sync_handlers.go  syncer.go  types.go  types.zig
rpc/: TokenProgram.sol  api.go  eth_api.go  eth_filters.go  eth_tx.go  methods.zig  mod.zig  net_api.go  types.go  zelius_api.go
rust/: Cargo.toml  README.md
rust/crates/zephyria-consensus/: Cargo.toml
rust/crates/zephyria-consensus/src/: engine.rs  lib.rs  vdf.rs  votepool.rs  vrf.rs
rust/crates/zephyria-core/: Cargo.toml
rust/crates/zephyria-core/benches/: block_import.rs
rust/crates/zephyria-core/src/: blockchain.rs  executor.rs  lib.rs  pool.rs
rust/crates/zephyria-core/tests/: mining_simulation.rs
rust/crates/zephyria-node/: Cargo.toml
rust/crates/zephyria-node/src/: main.rs
rust/crates/zephyria-p2p/: Cargo.toml
rust/crates/zephyria-p2p/src/: behaviour.rs  haki.rs  lib.rs  protocol.rs
rust/crates/zephyria-state/: Cargo.toml
rust/crates/zephyria-state/src/: lib.rs  precompile.rs  trie.rs
rust/crates/zephyria-state/tests/: persistence.rs
rust/crates/zephyria-types/: Cargo.toml
rust/crates/zephyria-types/src/: lib.rs
rust/crates/zephyria-vm/revm-bytecode/: Cargo.toml
rust/crates/zephyria-vm/revm-bytecode/src/: opcode.rs
rust/crates/zephyria-vm/revm-context/: Cargo.toml
rust/crates/zephyria-vm/revm-context-interface/: Cargo.toml
rust/crates/zephyria-vm/revm-context-interface/src/: cfg.rs
rust/crates/zephyria-vm/revm-context/src/journal/: inner.rs
rust/crates/zephyria-vm/revm-core/: Cargo.toml
rust/crates/zephyria-vm/revm-database/: Cargo.toml
rust/crates/zephyria-vm/revm-database-interface/: Cargo.toml
rust/crates/zephyria-vm/revm-handler/: Cargo.toml
rust/crates/zephyria-vm/revm-handler/src/: frame.rs
rust/crates/zephyria-vm/revm-inspector/: Cargo.toml
rust/crates/zephyria-vm/revm-inspector/src/: handler.rs
rust/crates/zephyria-vm/revm-interpreter/: Cargo.toml
rust/crates/zephyria-vm/revm-interpreter/src/: analysis.rs  instruction_result.rs  instructions.rs  interpreter_action.rs  lib.rs
rust/crates/zephyria-vm/revm-interpreter/src/instructions/: contract.rs  host.rs
rust/crates/zephyria-vm/revm-interpreter/src/interpreter_action/: create_inputs.rs  eof_create_inputs.rs
rust/crates/zephyria-vm/revm-precompile/: Cargo.toml
rust/crates/zephyria-vm/revm-primitives/: Cargo.toml
rust/crates/zephyria-vm/revm-primitives/src/: constants.rs  eof.rs  lib.rs
rust/crates/zephyria-vm/revm-state/: Cargo.toml
rust/crates/zephyria-vm/revm-state/src/: account_info.rs
rust/crates/zephyria-vm/revmc/: Cargo.toml
rust/crates/zephyria-vm/revmc-builtins/: Cargo.toml
rust/crates/zephyria-vm/revmc-builtins/src/: gas.rs  ir.rs  lib.rs  utils.rs
rust/crates/zephyria-vm/revmc-cli/: Cargo.toml
rust/crates/zephyria-vm/revmc-cli/benches/: bench.rs
rust/crates/zephyria-vm/revmc-cli/benches/iai/: prev.rs
rust/crates/zephyria-vm/revmc-cli/src/: benches.rs  lib.rs  main.rs
rust/crates/zephyria-vm/revmc-context/: Cargo.toml
rust/crates/zephyria-vm/revmc-context/src/: lib.rs
rust/crates/zephyria-vm/revmc/src/: lib.rs  linker.rs
rust/crates/zephyria-vm/revmc/src/bytecode/: info.rs  mod.rs  opcode.rs
rust/crates/zephyria-vm/revmc/src/compiler/: mod.rs  translate.rs
rust/crates/zephyria-vm/revmc/src/tests/: fibonacci.rs  meta.rs  mod.rs  resume.rs  runner.rs
scripts/: start.sh
src/: main.zig
state/: accessors.go  cache.go  data_account.go  delta_test.go  global_account.go  journal.go  pda.go  program_account.go  pruning.go  statedb.go  statedb_access_test.go  statedb_journal_test.go  statedb_test.go  stub.go  verkle_test.go
storage/: mod.zig  state.zig
types/: block.go  params.go  receipt.go  slashing.go  validator.go  vote.go
vm/: aquarius_test.go  batch_executor.zig  benchmark.zig  benchmark_demo.zig  call_frame.zig  compiler_interface.zig  constants.go  contracts.go  eips.go  eof.go  eof_test.go  eof_validation.go  eof_validation_test.go  evm.go  evm_create_data.go  evm_eof_test.go  gas_table.go  instructions.go  interface.go  interpreter.go  jit_helpers.zig  jit_poc.zig  jump_table.go  jump_table_export.go  main.zig  op_datacreate.go  opcodes.go  parallel_optimized_example.zig  quick_benchmark.zig  simple_benchmark.zig  verifier.zig
web-test/: index.html
zig/: Token.sol  build.zig  build.zig.zon  patch_dup_swap.zig  patch_push.zig  patch_stencils.zig
(+425 files in other folders)
