[workspace]
resolver = "2"
members = [
    "crates/zephyria-consensus",
    "crates/zephyria-core",
    "crates/zephyria-node",
    "crates/zephyria-p2p",
    "crates/zephyria-state",
    "crates/zephyria-types",
    "crates/zephyria-vm/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
license = "MIT"
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
categories = ["no-std", "compilers", "cryptography::cryptocurrencies"]
keywords = ["revm", "evm", "ethereum", "blockchain", "no_std"]
repository = "https://github.com/0xZephyria/Zephyria"
documentation = "https://github.com/0xZephyria/Zephyria"
homepage = "https://github.com/0xZephyria/Zephyria"
readme = "README.md"
exclude = [".github/", "benches/", "fuzz/", "tests/", "crates/zephyria-vm/revmc/exclude"]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"

[workspace.dependencies]
# Core Alloy
alloy-primitives = { version = "1.5.0", default-features = false }
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-eip2930 = { version = "0.2.1", default-features = false }
alloy-eip7702 = { version = "0.6.1", default-features = false }
alloy-eip7928 = { version = "0.3.0", default-features = false }
alloy-eips = { version = "1.1.3", default-features = false }
alloy-sol-types = { version = "1.5.0", default-features = false }
alloy-consensus = { version = "1.1.3", default-features = false }
alloy-provider = { version = "1.1.3", default-features = false }
alloy-signer = { version = "1.1.3", default-features = false }
alloy-signer-local = { version = "1.1.3", default-features = false }
alloy-transport = { version = "1.1.3", default-features = false }

# Revm Components (Relative Paths)
# Revm Components (Relative Paths)
# Revm Components (Relative Paths)
revm = { path = "crates/zephyria-vm/revm-core", version = "33.1.0", default-features = false }
primitives = { path = "crates/zephyria-vm/revm-primitives", package = "revm-primitives", version = "21.0.2", default-features = false }
bytecode = { path = "crates/zephyria-vm/revm-bytecode", package = "revm-bytecode", version = "7.1.1", default-features = false }
database = { path = "crates/zephyria-vm/revm-database", package = "revm-database", version = "9.0.6", default-features = false }
database-interface = { path = "crates/zephyria-vm/revm-database-interface", package = "revm-database-interface", version = "8.0.5", default-features = false }
state = { path = "crates/zephyria-vm/revm-state", package = "revm-state", version = "8.1.1", default-features = false }
interpreter = { path = "crates/zephyria-vm/revm-interpreter", package = "revm-interpreter", version = "31.1.0", default-features = false }
inspector = { path = "crates/zephyria-vm/revm-inspector", package = "revm-inspector", version = "14.1.0", default-features = false }
precompile = { path = "crates/zephyria-vm/revm-precompile", package = "revm-precompile", version = "31.0.0", default-features = false }
context = { path = "crates/zephyria-vm/revm-context", package = "revm-context", version = "12.1.0", default-features = false }
context-interface = { path = "crates/zephyria-vm/revm-context-interface", package = "revm-context-interface", version = "13.1.0", default-features = false }
handler = { path = "crates/zephyria-vm/revm-handler", package = "revm-handler", version = "14.1.0", default-features = false }

# Revmc Components (Relative Paths)
revmc = { path = "crates/zephyria-vm/revmc", version = "0.1.0", default-features = false }
revmc-backend = { path = "crates/zephyria-vm/revmc-backend", version = "0.1.0", default-features = false }
revmc-build = { path = "crates/zephyria-vm/revmc-build", version = "0.1.0", default-features = false }
revmc-builtins = { path = "crates/zephyria-vm/revmc-builtins", version = "0.1.0", default-features = false }
revmc-context = { path = "crates/zephyria-vm/revmc-context", version = "0.1.0", default-features = false }
revmc-cranelift = { path = "crates/zephyria-vm/revmc-cranelift", version = "0.1.0", default-features = false }
revmc-llvm = { path = "crates/zephyria-vm/revmc-llvm", version = "0.1.0", default-features = false }

# Zephyria Shared
blst = "0.3.15"
sha2 = "0.10.9"
rand = "0.9"
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
hex = "0.4"
k256 = { version = "0.13.4", features = ["ecdsa"] }
bitflags = { version = "2.6", default-features = false }
bitvec = { version = "1", default-features = false }
paste = "1.0"
derive-where = "1.6"
auto_impl = "1.3.0"
phf = { version = "0.13", default-features = false }
num_enum = { version = "0.7", default-features = false }
once_cell = { version = "1.21", default-features = false }
either = { version = "1.15.0", default-features = false }
derive_more = "2.1.1"
bytes = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-tracy = "0.11"
rustc-hash = "2.1"
color-eyre = "0.6"
ruint = { version = "1.12", default-features = false }
similar-asserts = "1.5"

# Precompiles
ark-bls12-381 = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false }
ark-ec = { version = "0.5", default-features = false }
ark-ff = { version = "0.5", default-features = false }
ark-serialize = { version = "0.5", default-features = false }
ark-std = { version = "0.5", default-features = false }
cfg-if = { version = "1.0", default-features = false }
c-kzg = { version = "2.1.4", default-features = false }
secp256k1 = { version = "0.31.1", default-features = false }
ripemd = { version = "0.1.3", default-features = false }
p256 = { version = "0.13.2", default-features = false }
aurora-engine-modexp = { version = "1.2", default-features = false }
bn = { package = "substrate-bn", version = "0.6", default-features = false }
gmp-mpfr-sys = { version = "1.6", default-features = false }
clap = { version = "4", features = ["derive"] }
criterion = { package = "codspeed-criterion-compat", version = "3.0" }
eyre = "0.6.12"
indicatif = "0.18"
walkdir = "2.5"
rstest = "0.26.0"
plain_hasher = "0.2"
triehash = "0.8"
hash-db = "0.15"
arbitrary = "1.3"

# Internal Paths
zephyria-types = { path = "./crates/zephyria-types" }
zephyria-core = { path = "./crates/zephyria-core" }
zephyria-state = { path = "./crates/zephyria-state" }
zephyria-consensus = { path = "./crates/zephyria-consensus" }
